# Data-Augmentation-with-LLMs

./: .gitignore  README.md  main.py  pyproject.toml  test.json
.hydra/: config.yaml  hydra.yaml  overrides.yaml
data/super_glue-boolq/grok-3-mini/: batchoutput_0001.jsonl  batchoutput_0002.jsonl
data/super_glue-cb/gpt-4o-mini/: batchoutput_0001.jsonl  synthetic-5-25.jsonl  synthetic-5-5.jsonl
data/super_glue-copa/grok-3-mini/: batchoutput_0001.jsonl  synthetic.jsonl
data/super_glue-multirc/grok-3-mini/: batchoutput_0001.jsonl  synthetic.jsonl
data/super_glue-rte/grok-3-mini/: batchoutput_0001.jsonl
data/super_glue-wic/grok-3-mini/: batchoutput_0001.jsonl  batchoutput_0002.jsonl
data/super_glue-wsc/grok-3-mini/: batchoutput_0001.jsonl
deepseek/: deepseek_convert_to_dataset.py  deepseek_generate.py  deepseek_prompt.py  deepseek_retreive.py  setting.yaml
deepseek/batches/super_glue-cb/: batchinput_0001.jsonl
deepseek/outputs/super_glue-cb/: deepseek_output_batchinput_0001.jsonl
deepseek/prompts/glue-mrpc/: system.txt  user.txt
gemini/: gem_convert_to_dataset.py  gem_generate.py  gem_retreive.py  setting.yaml
gemini/prompts/glue-mrpc/: schema.json
gemini/prompts/super_glue-cb/: system.txt  user.txt
gpt/: convert_to_dataset.py  generate.py  prompt.py  retreive.py  setting.yaml  test_openAI.py
gpt/batches/glue-mrpc/: batchinput_0001.jsonl  (+1 more)
grok/: convert_to_dataset_grok.py  grok_convert_to_dataset.py  grok_generate.py  grok_prompt.py  grok_retreive.py  grok_retrieve.py  prompt.py  setting.yaml  test_grok.py
grok/prompts/: utils.py
(+45 files in other folders)
